\title{\pkg{rslurm} news}

\newcommand{\ghpr}{\href{https://github.com/sesync-ci/rslurm/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/sesync-ci/rslurm/issues/#1}{##1}}

\section{Changes in version 0.4.1 (YYYY-MM-DD)}{
    \subsection{NEW FEATURES}{
        \itemize{
            \item Improved status with \code{get_job_status}, deprecating \code{print_job_status} (\ghpr{37}).
        }
    }
    \subsection{FIXES}{
        \itemize{
        }
    }
  
}

\section{Changes in version 0.4.0 (2017-10-17)}{
    \subsection{NEW FEATURES AND FIXES}{
        \itemize{
            \item Pass (serialized) functions to Slurm nodes without stringifying.
            \item Save \code{add_objects} objects from correct environment.
            \item Package tests evaluate on a cluster when available.
            \item Include reverse dependency check in release process.
        }
    }
    \subsection{REVERSIONS}{
        \itemize{
            \item README now separate from package documentation.
            \item Vignette can be built on CRAN tests again (no slurm submissions).
            \item Returned to parallel::mcmapply, without SIMPLIFY, to prevent
            mc.cores error when checking on Windows.
        }
    }
}

\section{Changes in version 0.3.3 (2017-04-07)}{
    \subsection{NEW FEATURES AND FIXES}{
        \itemize{
            \item Create README from R/slurm.R.
        }
    }
}

\section{Changes in version 0.3.2 (2017-04-06)}{
    \subsection{NEW FEATURES AND FIXES}{
        \itemize{
            \item "wait" argument adds option to slurm_apply and slurm_call to
            block the calling script until the submitted job completes. This
            option can be used to allow immediate processing of a submitted
            job's output (\ghpr{2}).
            \item Use ".RDS" file extension, rather than ".RData", for
            serialized objects (\ghpr{4}).
            \item Minor bug fixes (\ghpr{4}).
        }
    }
}
