@@ -7,7 +7,7 @@ Description: Functions that simplify submitting R scripts to a Slurm
 Acknowledgements: Development of this R package was supported by the National
     Socio-Environmental Synthesis Center (SESYNC) under funding received from
     the National Science Foundation DBI-1052875.
-Version: 0.4.0.9001
+Version: 0.4.0.9002
 License: GPL-3
 URL: https://github.com/SESYNC-ci/rslurm
 BugReports: https://github.com/SESYNC-ci/rslurm/issues
