@@ -8,4 +8,5 @@ export(print_job_status)
 export(slurm_apply)
 export(slurm_call)
 export(slurm_job)
+importFrom(parallel,mclapply)
 importFrom(utils,capture.output)
